--- a/package.json
+++ b/package.json
@@ -9,23 +9,12 @@
     "build": "parcel build index.html",
     "test": "jest",
     "lint": "eslint . --max-warnings=0 --ext .ts,.tsx",
-    "prettier": "prettier . --write",
-    "precommit": "lint-staged"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn precommit"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": "eslint --max-warnings 0 --cache --fix"
+    "prettier": "prettier . --write"
   },
   "resolutions": {
     "styled-components": "^5"
   },
   "dependencies": {
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1",
@@ -34,10 +23,10 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
+    "@types/jest": "^26.0.15",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/styled-components": "^5.1.4",
-    "@types/jest": "^26.0.15",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
@@ -47,10 +36,20 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": ">=4",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
+    "lint-staged": ">=10",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --cache --fix"
   }
 }
